--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,7 @@
 .container{
   display: flex;
   justify-content: center;
+  height: 100vh;
 }
 
 .wrapperTasklist{
@@ -8,14 +9,40 @@
   padding: 20px;
   font-size: 20px;
   width: 60%;
-  margin: 25px
+  margin: 25px;
+  height: max-content;
 }
 
+/* button, select */
 button,
 select{
   cursor: pointer;
+  font-size: 20px;
+  padding: 5px;
+  border: 2px solid var(--primaryColor);
+  color: var(--primaryColor);
+  background: none;
+  transition: 0.2s ease;
 }
 
+button:hover,
+select:hover {
+  border-color: var(--primaryHoverColor);
+  color: var(--primaryHoverColor);
+}
+
+/* input */
+input {
+  background-color: transparent;
+  border: 1px solid var(--txtColor);
+  color: var(--txtColor);
+  font-size: 20px;
+  padding: 0 5px;
+  width: 100%;
+  height: 40px;
+}
+
+/* input checkbox */
 input[type="checkbox"]{
   appearance: none;
   max-width: 42px;
@@ -43,6 +70,7 @@ input[type="checkbox"]:checked:after{
   vertical-align: middle;
 }
 
+/* media */
 @media (max-width:767px) {
   .wrapperTasklist{
     width: 100%;
