--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -14,32 +14,11 @@
   flex-direction: column;
   padding: 20px;
 }
-
+.btnWrapper button:first-child{
+  margin-right: 10px;
+}
 h2{
   text-align: center;
   padding-bottom: 20px;
   margin: 15px 0;
-}
-
-input {
-  background-color: transparent;
-  border: 1px solid var(--txtColor);
-  color: var(--txtColor);
-  font-size: 20px;
-  padding: 0 5px;
-  width: 100%;
-  height: 40px;
-}
-
-.btnWrapper button{
-  font-size: 20px;
-  padding: 5px;
-  border: 2px solid var(--primaryColor);
-  color: var(--primaryColor);
-  background: none;
-  transition: 0.2s ease;
-}
-.btnWrapper button:hover{
-  border-color: var(--primaryHoverColor);
-  color: var(--primaryHoverColor);
 }
