--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(64,22,105,1) 30%, rgba(0,155,255,1) 100%);
+  background: linear-gradient(45deg, rgb(2, 0, 50) 0%, rgb(89, 29, 148) 30%, rgba(0,155,255,1) 100%);
   color: var(--txtColor);
 }
 
