--- a/src/components/TaskList.css
+++ b/src/components/TaskList.css
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  max-height: calc(60% - 30px);
+  overflow-y: scroll;
+}
+.taskCount{
+  margin: 5px 0;
 }
