--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,8 +1,13 @@
 .wrapperModal{
+  width: 20%;
+}
+.modal{
   height: 100vh;
   background-color: var(--bgColor);
-  width: 20%;
+  /* width: 20%; */
   animation: ejectionModal 0.5s;
+  position: fixed;
+  /* right: 0; */
 }
 .editModal{
   display: flex;
@@ -40,12 +45,16 @@ h2{
   background-color: #333;
 }
 /* media */
-@media (max-width:420px) {
+@media (max-width: 1200px) {
   .wrapperModal{
+    width: 100%;
     position: fixed;
+    z-index: 10;
+  }
+  .modal{
     right: 0;
     z-index: 10;
-    width: 70%;
+    width: 40%;
   }
   .mobilePopup{
     position: absolute;
@@ -53,6 +62,16 @@ h2{
     width: 100vw;
     height: 100vh;
     z-index: 2;
+  }
+}
+@media (max-width: 768px) {
+  .modal{
+    width: 55%;
+  }
+}
+@media (max-width: 420px) {
+  .modal{
+    width: 70%;
   }
 }
 
