--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  height: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,6 +11,7 @@ body {
   background: linear-gradient(45deg, rgb(2, 0, 50) 0%, rgb(89, 29, 148) 30%, rgba(0,155,255,1) 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  height: 100%;
   color: var(--txtColor);
 }
 
