--- a/src/global.css
+++ b/src/global.css
@@ -59,7 +59,7 @@ input {
   font-size: 1.2rem;
   border: hidden;
   border-bottom: 2px solid var(--primaryColor);
-  background-color: var(--bgColor);
+  background-color: transparent;
   color: var(--txtColor);
   transition: border-color 0.2s ease;
 }
@@ -88,17 +88,20 @@ input[type="checkbox"] {
   appearance: none;
   cursor: pointer;
   margin: 0;
-  background-color: var(--bgTaskColor);
-  color: var(--bgTaskColor);
+  background-color: transparent;
+  color: transparent;
+  border: 2px solid var(--primaryColor);
 }
 
 input[type="checkbox"]:hover {
-  box-shadow: inset 0 0 100px 100px rgb(255 255 255 / 0.2);
+  border: 2px solid var(--primaryHoverColor);
+  color: var(--bgTaskColor);
 }
 
 input[type="checkbox"]:checked {
   appearance: none;
   background-color: var(--primaryColor);
+  color: var(--bgTaskColor);
   text-align: center;
 }
 
@@ -174,9 +177,8 @@ section {
 
 .inputBox.additions input[type="checkbox"],
 .inputBox.additions input[type="color"] {
-  width: 37px;
-  height: 37px;
-  border-bottom: 0;
+  width: 39px;
+  height: 39px;
 }
 
 .inputBox.additions input[type="color"] {
@@ -243,7 +245,6 @@ section {
 }
 
 .taskWrapper.done {
-  /* background-color: red; */
   filter: grayscale(80%);
 }
 
@@ -305,6 +306,11 @@ section {
   top: 0;
 }
 
+.taskWrapper.edit {
+  cursor: auto;
+}
+
+/* --- KeyFrames --- */
 @keyframes ejectingTask {
   from {
     transform: translateX(-100%);
